--- a/AgentCooperation/Agents.xaml
+++ b/AgentCooperation/Agents.xaml
@@ -19,11 +19,22 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition/>
             <RowDefinition Height="2*"></RowDefinition>
             <RowDefinition Height="8*"></RowDefinition>
         </Grid.RowDefinitions>
-            
-         <Grid Grid.Row="0">
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Name="BackBtn" Click="BackBtn_Click" Background="Transparent" BorderThickness="0" HorizontalContentAlignment="Left" Margin="10,5,500,5">
+                <Image Source=".\PNG/prev.png"/>
+            </Button>
+            <Label Grid.Column="0" Content="Agents View" HorizontalAlignment="Right" FontSize="15" FontWeight="Bold" VerticalAlignment="Center"/>
+            <Label Grid.Column="1" Name="AgentNameLbl" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="15" FontWeight="Bold" Margin="0,0,50,0"/>
+        </Grid>
+         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
@@ -45,7 +56,7 @@
             </Button>
         </Grid>
 
-        <DataGrid Name="AgentsGridView" Grid.Row="1" AutoGenerateColumns="False" >
+        <DataGrid Name="AgentsGridView" Grid.Row="2" AutoGenerateColumns="False" >
             <DataGrid.Columns >
                 <DataGridTextColumn Width="1*" Header="CODE" HeaderStyle="{StaticResource CenterGridHeaderStyle}" Binding="{Binding Agent_Code}"/>
                 <DataGridTextColumn Width="3*" Header="NAME" HeaderStyle="{StaticResource CenterGridHeaderStyle}" Binding="{Binding Agent_Name}"/>
